[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "file_handler"
description = "package to use handle open and write diverse files as txt, json, xls, etc"
license = "LICENSE"
readme = "README.md"
keywords = ["file", "handler", "txt", "json", "xls"]
authors = [
    { name = "Fernando Casale Neto", email = "fcasalen@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.11, <4.0"
dynamic = ["version", "dependencies"]

[tool.poetry]
packages = [{include = "file_handler", from = "src"}]
version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "{base}"

[tool.poetry.dependencies]
multiprocess = "^0.70.18"
pandas = "^2.3.3"
"pdfminer.six" = "20251107"
python_pptx = "^1.0.2"
tqdm = "^4.67.1"
loguru = "^0.7.3"
openpyxl = "^3.1.5"
pyarrow = "^22.0.0"
fastparquet = "^2025.12.0"
xlrd = "^2.0.2"
pyxlsb = "^1.0.10"
python-calamine = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
detect = "^2020.12.3"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "C", "N"]

[tool.ruff.format]
docstring-code-format = true
